<resources>
    <string name="app_name">Boutique</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="boutique_content">Boutique Android \nGUARSSIFI Younes \nSKORA Vincent</string>

    <string name="euro">€</string>
    <string name="moins">-</string>
    <string name="pourcent">%</string>
    <string name="ajouter">Ajouter</string>
    <string name="retour">Retour</string>
    <string name="du">du</string>
    <string name="au">au</string>

    <string name="ajout_categorie">Ajout d\'une catégorie</string>
    <string name="ajout_article">Ajout d\'un article</string>
    <string name="ajout_promotion">Ajout d\'une promotion</string>

    <string name="supp_categorie_message">Êtes vous sur de vouloir supprimer cette catégorie ?</string>
    <string name="supp_categorie_titre">Suppression d\'une catégorie</string>
    <string name="supp_article_message">Êtes vous sur de vouloir supprimer cet article ?</string>
    <string name="supp_article_titre">Suppression d\'un article</string>
    <string name="supp_promotion_message">Êtes vous sur de vouloir supprimer cette promotion ?</string>
    <string name="supp_promotion_titre">Suppression d\'une promotion</string>
    <string name="supp_ok">Suppression effectuée</string>
    <string name="supp_en_cours">Suppression en cours</string>

    <string name="ajout_ok">Ajout effectué</string>
    <string name="modif_ok">Modification effectuée</string>
    <string name="erreur_serveur">Erreur : Impossible de joindre le serveur</string>
    <string name="erreur_promotion">Une promotion sur le même article avec la même date de début existe déja</string>
    <string name="champs_non_changé">Aucun changement détécté</string>

    <string name="reference">Référence: </string>
    <string name="nom">Nom: </string>
    <string name="visuel">Visuel: </string>
    <string name="tarif">Tarif: </string>
    <string name="categorie">Catégorie: </string>
    <string name="article">Article: </string>
    <string name="date_debut">Date de début: </string>
    <string name="date_fin">Date de fin: </string>
    <string name="pourcentage">Réduction: </string>
    <string name="positif">Oui</string>
    <string name="negatif">Non</string>
    <string name="cancel">Annuler</string>
    <string name="modifier">Modifier</string>
    <string name="modif_article">Modifier article</string>
    <string name="modif_categorie">Modifier catégorie</string>
    <string name="modif_promotion">Modifier promotion</string>

</resources>
