<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/labelArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/ajout_article" />

    <TextView
        android:id="@+id/labelNomArticle"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/nom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editNomArticle"/>

    <EditText
        android:id="@+id/editNomArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:ems="8"
        app:layout_constraintTop_toBottomOf="@+id/labelArticle"
        app:layout_constraintLeft_toRightOf="@id/labelNomArticle"/>

    <TextView
        android:id="@+id/labelNomVisuel"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/visuel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editNomVisuel"/>

    <EditText
        android:id="@+id/editNomVisuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:ems="8"
        app:layout_constraintTop_toBottomOf="@+id/labelNomArticle"
        app:layout_constraintLeft_toRightOf="@id/labelNomVisuel"/>

    <TextView
        android:id="@+id/labelCategorie"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/categorie"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNomVisuel"
        app:layout_constraintRight_toLeftOf="@id/dateDebut"/>

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/editNomVisuel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/labelArticle"
        android:visibility="invisible"
        android:id="@+id/categorieSpinner">

    </android.support.v7.widget.AppCompatSpinner>

    <ProgressBar
        android:id="@+id/loaderlist"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:indeterminate="true"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/editNomVisuel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/labelArticle"
        />

    <TextView
        android:id="@+id/labelReferenceArticle"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/reference"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editReferenceArticle"/>

    <EditText
        android:id="@+id/editReferenceArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="5"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/labelCategorie"
        app:layout_constraintLeft_toRightOf="@id/labelReferenceArticle"/>

    <TextView
        android:id="@+id/labelTarif"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/tarif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTarif"/>

    <EditText
        android:id="@+id/editTarif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="3"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/labelReferenceArticle"
        app:layout_constraintLeft_toRightOf="@id/labelTarif"/>

    <TextView
        android:id="@+id/labelEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/editTarif"
        app:layout_constraintBaseline_toBaselineOf="@id/editTarif"
        android:text="@string/euro" />

    <Button
        android:id="@+id/btnOkArticle"
        android:text="@string/ajouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="125dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/btnRetour"
        />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editTarif"
        app:layout_constraintRight_toLeftOf="@+id/btnRetour"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnRetour"
        android:text="@string/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTarif"
        />

</android.support.constraint.ConstraintLayout>