<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iut.guarssif3u.boutique.ManagePromotionActivity">

    <TextView
        android:id="@+id/labelPromotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:text="@string/ajout_promotion" />

    <LinearLayout
        android:id="@+id/rowArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/labelPromotion">

        <TextView
            android:id="@+id/labelArticle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/article" />

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:id="@+id/articleSpinner">

        </android.support.v7.widget.AppCompatSpinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowDateDebut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/rowArticle">

        <TextView
            android:id="@+id/labelDateDebut"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/date_debut" />

        <EditText
            android:id="@+id/dateDebut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:focusableInTouchMode="false"
            app:layout_constraintLeft_toRightOf="@id/labelDateDebut" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowDateFin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/rowDateDebut">

        <TextView
            android:id="@+id/labelDateFin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/date_fin" />

        <EditText
            android:id="@+id/dateFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:focusableInTouchMode="false"
            app:layout_constraintLeft_toRightOf="@id/labelDateFin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowPourcentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/rowDateFin">

        <TextView
            android:id="@+id/labelPourcentage"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/pourcentage" />

        <EditText
            android:id="@+id/editPourcentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            app:layout_constraintLeft_toRightOf="@id/labelPourcentage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rowPourcentage"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent">

        <Button
            android:id="@+id/btnOkPromotion"
            android:tag="ajouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/ajouter" />

        <Button
            android:id="@+id/btnRetour"
            android:tag="ajouter"
            android:onClick="retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retour" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
